// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message DownstreamEvent {

  message Metrics {
    string name = 1;
    float threshold = 2;
    float value = 3;
    float margin = 4;
    reserved 5 to 1000;
  }

  string project_id = 1;
  string region_id = 2;
  string resource_path = 3;

  optional int32 current_size = 4;
  optional int32 suggested_size = 5;
  optional string units = 6;
  repeated Metrics metrics = 7;

  reserved 8 to 1000;
}
